--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 classes/
-/target
-/.settings
-/.classpath
-/.project
+target
+.settings
+.classpath
+.project
 /kaitaospringmvc
