--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -10,9 +7,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#eclipse config files
 target
 .settings
 .classpath
 .project
-/kaitaospringmvc
+
+#idea config files
 .idea
+
+#other ignore file
+/kaitaospringmvc
